Fixed issues with scrollbar and made transition more smooth to next page after continue button is clicked

--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,17 @@ Stream: #acd0cd
 */
 
 @import url('https://fonts.googleapis.com/css2?family=Rubik:wght@300&display=swap');
+
+.disable-scrollbars::-webkit-scrollbar {
+    width: 0px;
+    background: transparent; /* Chrome/Safari/Webkit */
+}
+
+.disable-scrollbars {
+  scrollbar-width: none; /* Firefox */
+  -ms-overflow-style: none;  /* IE 10+ */
+}
+
 .stop-scrolling { 
     height: 100%; 
     overflow: hidden !important; 
@@ -79,7 +90,9 @@ html, body {
     right: 0;
     bottom: 0;
     overflow: hidden;
-    display: block;
+    display: flex;
+    flex-direction: column;
+    flex-direction: row;
     align-items: center;
     justify-content: center;
     border-radius: 10px;
